tests/parse/snapshots/parse__err_binop_chains.lx.snap
---
source: tests/parse.rs
description: "+ 4;\n4 + (* nil) - 5;\n\n4 + ;\n4 + (nil *) - 5;\n\n\"hey\" + (4 - nil;\n\n123.4 - (nil \"whoops\";\n\n8 * + 4;\n\n45 - nil ) / false;\n"
expression: render_dcx()
---
error: unexpected `+` token in input
  --> tests/parse/err_binop_chains.lx:1:1
  |
1 | + 4;
  | ^ unexpected token here
  |
  = note: expected statement

error: unexpected `*` token in input
  --> tests/parse/err_binop_chains.lx:2:6
  |
2 | 4 + (* nil) - 5;
  |      ^ unexpected token here
  |
  = note: expected expression

error: statement terminated prematurely
  --> tests/parse/err_binop_chains.lx:4:5
  |
4 | 4 + ;
  |     ^ statement terminated here
  |
  = note: expected expression

error: parentheses closed prematurely
  --> tests/parse/err_binop_chains.lx:5:11
  |
5 | 4 + (nil *) - 5;
  |     -     ^ parentheses closed here
  |     |      
  |     parentheses opened here
  |
  = note: expected expression

error: unclosed parentheses
  --> tests/parse/err_binop_chains.lx:7:17
  |
7 | "hey" + (4 - nil;
  |         -       ^ parentheses should have been closed here
  |         |        
  |         parentheses opened here
  |
  = note: expected `)`

error: unclosed parentheses
  --> tests/parse/err_binop_chains.lx:9:14
  |
9 | 123.4 - (nil "whoops";
  |         -    ^^^^^^^^ parentheses should have been closed here
  |         |     
  |         parentheses opened here
  |
  = note: expected `)`

error: unexpected `+` token in input
   --> tests/parse/err_binop_chains.lx:11:5
   |
11 | 8 * + 4;
   |     ^ unexpected token here
   |
   = note: expected expression

error: unterminated statement
   --> tests/parse/err_binop_chains.lx:13:10
   |
13 | 45 - nil ) / false;
   | -------- ^ statement should have been terminated here
   | |         
   | this statement
   |
   = note: expected `;`

error: unexpected `)` token in input
   --> tests/parse/err_binop_chains.lx:13:10
   |
13 | 45 - nil ) / false;
   |          ^ unexpected token here
   |
   = note: expected statement
